[feature/19-create-employer-endpoint]  (#21)
* [feature/19-create-employer-endpoint] employer endpoint added, employees added into cafe model. Delete user added into adminController.

* [feature/10-create-employer-endpoint] employer and admin controllers added

* [feature/19-create-employer-endpoint] endpoints are updated. swagger updated. postman ready to share.

* [feature/19-create-employer-endpoint] review yorumlarına göre düzenlendi

---------
